--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html><!--  Last Published: Mon Sep 16 2024 19:24:04 GMT+0000 (Coordinated Universal Time)  -->
+﻿<!DOCTYPE html>
 <html data-wf-page="6669c2dfb76c62389f782c96" data-wf-site="6669c2dfb76c62389f782c9b" lang="pt">
 <head>
   <meta charset="utf-8">
@@ -657,12 +657,12 @@ var url = document.location.href;
                   {
                     "items": [
                       {
-                        "url": "https://www.youtube.com/watch?v=47dI-2OsR_w",
-                        "originalUrl": "https://www.youtube.com/watch?v=47dI-2OsR_w",
+                        "url": "#",
+                        "originalUrl": "#",
                         "width": 940,
                         "height": 528,
                         "thumbnailUrl": "https://i.ytimg.com/vi/47dI-2OsR_w/hqdefault.jpg",
-                        "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2F47dI-2OsR_w%3Ffeature%3Doembed&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D47dI-2OsR_w&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2F47dI-2OsR_w%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen; encrypted-media; picture-in-picture;\" allowfullscreen=\"true\"></iframe>",
+                        "html": "<iframe class=\"embedly-embed\" src=\"#" width=\"940\" height=\"528\" scrolling=\"no\" title=\"YouTube embed\" frameborder=\"0\" allow=\"autoplay; fullscreen; encrypted-media; picture-in-picture;\" allowfullscreen=\"true\"></iframe>",
                         "type": "video"
                       }
                     ],
@@ -1312,13 +1312,13 @@ var url = document.location.href;
             </div>
             <div class="footer-content-down">
               <div class="footer-politica">
-                <a href="https://www.cnaspitaletti.com.br/" target="_blank" class="w-inline-block">
+                <a href="#" target="_blank" class="w-inline-block">
                   <div class="footer__link-block">
                     <script>document.write(new Date().getFullYear())</script> Copyright© Edifício Templários - Todos os direitos reservados
                   </div>
                 </a>
                 <div class="divider-product hide-mobile"></div>
-                <a href="politica-de-privacidade.html" class="w-inline-block">
+                <a href="#" class="w-inline-block">
                   <p class="footer__link-block">Política de privacidade</p>
                 </a>
               </div>
@@ -1341,7 +1341,7 @@ var url = document.location.href;
   </div>
   <script src="js/jquery-3.5.1.min.dc5e7f18c8.js?site=6669c2dfb76c62389f782c9b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/kaahomeboutique.js" type="text/javascript"></script><!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MCLV8FT5" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
   <!--  End Google Tag Manager (noscript)  -->
   <!--  Smooth Scrool Lenis.js  ==================================   -->
   <script src="gh/studio-freight/lenis%40latest/bundled/lenis.js"></script>
