--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ var url = document.location.href;
             </div>
             <div class="kaa-nome">
               <div class="name-logo-wrap">
-                <img src="images/logo_kaa_primary.svg" loading="lazy" alt="Logo Edifício Templários" class="name-logo">
+                <img src="images/logo-banner.png" loading="lazy" alt="Logo Edifício Templários" class="name-logo">
               </div>
               <div class="z-index-2">
                 <p class="name-overline">Edifício que representa</p>
