--- a/index.html
+++ b/index.html
@@ -939,29 +939,29 @@ var url = document.location.href;
                   <div class="list-component">
                     <img src="images/icon-localizacao-01.svg" loading="lazy" alt="Área verde preservada" class="list-icon">
                     <div class="list-text">
-                      <p class="list-text-title text-color-white">Área verde preservada</p>
-                      <p class="list-text-subtitle is-light-subtitle">122 mil m² com pista de caminhada</p>
+                      <p class="list-text-title text-color-black">Área verde preservada</p>
+                      <p class="list-text-subtitle is-dark-subtitle">122 mil m² com pista de caminhada</p>
                     </div>
                   </div>
                   <div class="list-component">
                     <img src="images/icon-localizacao-02.svg" loading="lazy" alt="Área total" class="list-icon">
                     <div class="list-text">
-                      <p class="list-text-title text-color-white">Área total</p>
-                      <p class="list-text-subtitle is-light-subtitle">279.546,20m²</p>
+                      <p class="list-text-title text-color-black">Área total</p>
+                      <p class="list-text-subtitle is-dark-subtitle">279.546,20m²</p>
                     </div>
                   </div>
                   <div class="list-component">
                     <img src="images/icon-localizacao-03.svg" loading="lazy" alt="Segurança 24h" class="list-icon">
                     <div class="list-text">
-                      <p class="list-text-title text-color-white">Dupla segurança</p>
-                      <p class="list-text-subtitle is-light-subtitle">Portaria 24h</p>
+                      <p class="list-text-title text-color-black">Dupla segurança</p>
+                      <p class="list-text-subtitle is-dark-subtitle">Portaria 24h</p>
                     </div>
                   </div>
                   <div class="list-component">
                     <img src="images/icon-localizacao-04.svg" loading="lazy" alt="Fiação subterrânea" class="list-icon">
                     <div class="list-text">
-                      <p class="list-text-title text-color-white">Fiação subterrânea</p>
-                      <p class="list-text-subtitle is-light-subtitle">Segurança e estética integradas</p>
+                      <p class="list-text-title text-color-black">Fiação subterrânea</p>
+                      <p class="list-text-subtitle is-dark-subtitle">Segurança e estética integradas</p>
                     </div>
                   </div>
                 </div>
