--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@ var url = document.location.href;
       </div>
     </div>
     <div class="sc-dividers">
-      <img src="images/divider-01-dark.png" loading="lazy" alt="" class="sc-divider-bottom">
+      <img src="images/divider-01-dark.svg" loading="lazy" alt="" class="sc-divider-bottom">
     </div>
   </section>
   <!-- parte 4 -->
