--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ var url = document.location.href;
   <!-- Divider -->
   <section class="sc-divider">
     <div class="sc-dividers">
-      <img src="images/divider-03-default.png" loading="lazy" alt="" class="sc-divider-top">
+      <img src="images/divider-03-default.svg" loading="lazy" alt="" class="sc-divider-top">
       <img src="images/divider-02-light.svg" loading="lazy" alt="" class="sc-divider-bottom">
     </div>
     <img src="images/foto1.jpg" loading="lazy" sizes="100vw" alt="" class="parallax-img">
@@ -1274,7 +1274,7 @@ var url = document.location.href;
       </div>
     </div>
     <div class="sc-dividers">
-      <img src="images/divider-small-02-dark.png" loading="lazy" alt="" class="sc-divider-top">
+      <img src="images/divider-small-02-dark.svg" loading="lazy" alt="" class="sc-divider-top">
       <img src="images/divider-small-01-creme.svg" loading="lazy" alt="" class="sc-divider-bottom">
     </div>
   </div>
