--- a/index.html
+++ b/index.html
@@ -470,51 +470,62 @@ var url = document.location.href;
   </div>
   
 <!-- PARTE 1 -->
-<section id="home" class="sc-hero">
+<section id="home" class="sc-hero" style="overflow-x:hidden;">
   <div class="absolute-content is-hero">
     <img src="images/organic-line_white.svg" loading="lazy" alt="" class="hero_bg-line">
     <div class="show-mobile">
       <img src="images/organic-line_white.svg" loading="lazy" alt="" class="hero_bg-line-02">
     </div>
-    <img src="images/folhas_kaa-1-min_1.webp" loading="lazy" width="Auto" height="Auto" alt="" srcset="images/folhas_kaa-1-min_1folhas_kaa-1-min.webp 500w, images/folhas_kaa-1-min_1.webp 645w" sizes="100vw" class="hero_leaf-01">
-    <img src="images/folhas_kaa-2-min.webp" loading="lazy" width="Auto" height="Auto" alt="" class="hero_leaf-02">
+    <img src="images/folhas_kaa-1-min_1.webp" loading="lazy" width="auto" height="auto" alt="" srcset="images/folhas_kaa-1-min_1folhas_kaa-1-min.webp 500w, images/folhas_kaa-1-min_1.webp 645w" sizes="100vw" class="hero_leaf-01">
+    <img src="images/folhas_kaa-2-min.webp" loading="lazy" width="auto" height="auto" alt="" class="hero_leaf-02">
   </div>
   <div class="padding-global">
     <div class="w-layout-blockcontainer container-medium is-fixed-container w-container">
       <div class="hero_content-wrap">
         <div class="hero_header">
-          <p class="hero-label">Lançamento<br><span class="label_span">Edifício Templários</span></p>
+          <p class="hero-label" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; margin:0;">
+            Lançamento<br>
+            <span class="label_span">Edifício Templários</span>
+          </p>
           <img src="images/logo-banner.png" loading="lazy" alt="Logo Edifício Templários" class="hero_logo">
         </div>
         <div class="hero-product">
-          <p class="produto-title">
+          <p class="produto-title" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; line-height:1.3; margin:0;">
             APARTAMENTOS DUPLEX EXCLUSIVOS<br>
             2 ou 3 quartos, 2 suítes<br>
             Área privativa: 89m² a 100m² | Área total: 168m² a 185m²
           </p>
           <div class="comand-product-line">
-            <p class="hero-subtitle">2 <span class="hero-subtitle-span">VAGAS DE GARAGEM</span></p>
+            <p class="hero-subtitle" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; margin:0;">
+              2 <span class="hero-subtitle-span">VAGAS DE GARAGEM</span>
+            </p>
             <div class="divider-product"></div>
             <div class="product-wrap">
-              <p class="hero-subtitle">Privativa: 89 a 100<span class="hero-subtitle-span">m<sup>2</sup></span></p>
+              <p class="hero-subtitle" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; margin:0;">
+                Privativa: 89 a 100<span class="hero-subtitle-span">m<sup>2</sup></span>
+              </p>
             </div>
           </div>
           <div class="comand-product line2">
-            <p class="hero-subtitle-small">
+            <p class="hero-subtitle-small" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; margin:0;">
               <span class="text-span">Salão de festas com cozinha gourmet e churrasqueira<br></span>
             </p>
           </div>
-          <p class="product-heading">Projeto Exclusivo</p>
-          <p class="hero-cta">Realize seu sonho</p>
+          <p class="product-heading" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; margin:0;">
+            Projeto Exclusivo
+          </p>
+          <p class="hero-cta" style="font-size:4vw; max-width:100%; word-wrap: break-word; white-space: normal; margin:0;">
+            Realize seu sonho
+          </p>
         </div>
         <a href="#sobre" class="hero_arrow w-inline-block">
           <div class="hero-arrow is-arrow-01 w-embed">
-            <svg width="auto" height="auto" viewbox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="auto" height="auto" viewBox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path opacity="0.7" fill-rule="evenodd" clip-rule="evenodd" d="M14.7008 0L16 1.25739L8 9L0 1.25739L1.29918 0L8 6.48523L14.7008 0Z" fill="currentColor"></path>
             </svg>
           </div>
           <div class="hero-arrow is-arrow-02 w-embed">
-            <svg width="auto" height="auto" viewbox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="auto" height="auto" viewBox="0 0 16 9" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path opacity="0.7" fill-rule="evenodd" clip-rule="evenodd" d="M14.7008 0L16 1.25739L8 9L0 1.25739L1.29918 0L8 6.48523L14.7008 0Z" fill="currentColor"></path>
             </svg>
           </div>
@@ -523,6 +534,7 @@ var url = document.location.href;
     </div>
   </div>
 </section>
+
 <!-- PARTE 1 -->
 
 	
