--- a/index.html
+++ b/index.html
@@ -476,8 +476,7 @@ var url = document.location.href;
     <div class="show-mobile">
       <img src="images/organic-line_white.svg" loading="lazy" alt="" class="hero_bg-line-02">
     </div>
-    <img src="images/folhas_kaa-1-min_1.webp" loading="lazy" width="auto" height="auto" alt="" srcset="images/folhas_kaa-1-min_1folhas_kaa-1-min.webp 500w, images/folhas_kaa-1-min_1.webp 645w" sizes="100vw" class="hero_leaf-01">
-    <img src="images/folhas_kaa-2-min.webp" loading="lazy" width="auto" height="auto" alt="" class="hero_leaf-02">
+
   </div>
   <div class="padding-global">
     <div class="w-layout-blockcontainer container-medium is-fixed-container w-container">
@@ -609,7 +608,7 @@ var url = document.location.href;
               </div>
             </div>
             <div class="list-component">
-              <img src="images/icon-lazer-01.svg" loading="lazy" alt="Área de lazer" class="list-icon">
+              <img src="images/festas.svg" loading="lazy" alt="Área de lazer" class="list-icon">
               <div class="list-text">
                 <p class="list-text-title">Salão de Festas</p>
                 <p class="list-text-subtitle">Cozinha gourmet e churrasqueira</p>
@@ -1142,7 +1141,6 @@ var url = document.location.href;
               <div class="sc-header__title is-vertical-title">
                 <p class="heading-style-h3 is-balance">Viva em uma localização <span class="heading-span">excepcional</span></p>
               </div>
-              <img src="images/folhas_kaa-3-min_1.webp" loading="lazy" sizes="(max-width: 479px) 48px, 64px" srcset="images/folhas_kaa-3-min_1folhas_kaa-3-min.webp 500w, images/folhas_kaa-3-min_1.webp 730w" alt="Elemento decorativo" class="localizacao_leaf-01">
             </div>
             <div class="sc_content">
               <div class="full-list">
@@ -1177,7 +1175,7 @@ var url = document.location.href;
               </div>
               <div class="map-wrapper">
                 <div class="map w-embed w-iframe">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.360478661689!2d-49.2332606!3d-25.426209200000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce5ba9c27c7d5%3A0xc558d56a59a9750d!2sR.%20Monte%20Castelo%2C%20821%20-%20Tarum%C3%A3%2C%20Curitiba%20-%20PR%2C%2082530-200!5e0!3m2!1spt-BR!2sbr!4v1739965104960!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <img src="images/mapa.jpg">
                 </div>
                 <div class="map-button-wrapper">
                   <a href="https://maps.app.goo.gl/YtCZEJN8Y2a8AJKSA" target="_blank" class="map-button w-inline-block">
@@ -1187,9 +1185,6 @@ var url = document.location.href;
                       </svg>
                     </div>
                     <p>Ver mapa ampliado</p>
-                  </a>
-                  <a href="https://www.waze.com/en/live-map/directions?latlng=-23.488419074197008%2C-46.86613082885742" target="_blank" class="map-button w-inline-block">
-                    <p>Acessar pelo Waze</p>
                   </a>
                 </div>
               </div>
