--- a/index.html
+++ b/index.html
@@ -1241,26 +1241,17 @@ var url = document.location.href;
                 </div>
                 <p>Localização - Edifício Templários</p>
               </div>
+
+            </div>
+            <div class="sc_content">
               <div class="sc-header__title is-vertical-title">
                 <p class="heading-style-h3 is-balance">LOCAIS  <span class="heading-span">PRÓXIMOS</span></p>
               </div>
-            </div>
-            <div class="sc_content">
-
               <div class="map-wrapper">
-                <div class="map w-embed w-iframe">
+                <div>
                   <img src="images/locais.jpg">
                 </div>
-                <div class="map-button-wrapper">
-                  <a href="https://maps.app.goo.gl/YtCZEJN8Y2a8AJKSA" target="_blank" class="map-button w-inline-block">
-                    <div class="svg-icon-5 w-embed">
-                      <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <!-- SVG inalterado -->
-                      </svg>
-                    </div>
-                    <p>Ver mapa ampliado</p>
-                  </a>
-                </div>
+                
               </div>
               <div class="_2-col-content">
                 <div class="content-left">
